# ca-manager

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/ca_manager/: main.py  runtime.py  settings.py  settings_loader.py  workspace.py
src/ca_manager/commands/: init.py  inspect.py  show.py  version.py
src/ca_manager/commands/config/: __init__.py  show.py
src/ca_manager/commands/issue/: __init__.py  common.py  issue_client.py  issue_server.py
src/ca_manager/commands/list/: __init__.py  issued.py
src/ca_manager/config/: defaults.py  parsers.py  root_parser.py  section_spec.py  specs.py  yaml_loader.py
src/ca_manager/metadata/: model.py  store.py  types.py
tests/: conftest.py  test_init.py
