[project]
name = "ca-manager"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = ["cryptography>=46.0.3", "pyyaml>=6.0.3", "typer>=0.21.0"]

[project.scripts]
ca-manager = "ca_manager.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ca_manager"]

[tool.basedpyright]
venvPath = "."
venv = ".venv"
include = ["src"]
exclude = []
extraPaths = ["src"]
pythonPlatform = "Linux"
pythonVersion = "3.14"
#typeCheckingMode = "recommended"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".git-rewrite",
  ".hg",
  ".ipynb_checkpoints",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pyenv",
  ".pytest_cache",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  ".vscode",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "site-packages",
  "typings",
  "venv",
]

line-length = 110
indent-width = 4

src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.isort]
order-by-type = true
section-order = [
  "future",
  "standard-library",
  "third-party",
  "first-party",
  "local-folder",
]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"
line-ending = "lf"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

[dependency-groups]
dev = ["basedpyright>=1.36.2", "pytest>=9.0.2", "ruff>=0.14.10"]
